# CollisionTest

./: CMakeLists.txt
src/: CMakeLists.txt
src/fcl_wrap/: CMakeLists.txt  collision_manager.cpp  collision_manager.h  collision_manager_aabb_tree.cpp  collision_manager_aabb_tree.h  collision_manager_sap.cpp  collision_manager_sap.h  collision_matrix.h
src/rw_pqp_vs_fcl/: CMakeLists.txt  CollisionDetectorBase.h  FclCollisionDetector.cpp  FclCollisionDetector.h  RobWorkCollisionDetector.cpp  RobWorkCollisionDetector.h  main.cpp
